# streamflow-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  rustfmt.toml
benches/: processing.rs
docs/: ARCHITECTURE.md
examples/: basic_usage.rs
src/: config.rs  error.rs  lib.rs  metrics.rs  pipeline.rs  processor.rs  record.rs  storage.rs  transform.rs  validation.rs
tests/: integration_tests.rs
